--- a/photographer.html
+++ b/photographer.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+      <a href="index.html">
+        <img src="assets/images/logo.png" class="logo" />
+      </a>
     </header>
     <main id="main">
       <div class="photograph-header">
@@ -30,7 +32,7 @@
     <div id="contact_modal">
       <div class="modal">
         <header>
-          <h2>Contactez-moi</h2>
+          <h2 class="modal-title">Contactez-moi</h2>
           <img src="assets/icons/close.svg" onclick="closeModal()" />
         </header>
         <form>
@@ -49,6 +51,7 @@
               name="userMessage"
             />
           </div>
+
           <button class="contact_button">Envoyer</button>
         </form>
       </div>
