--- a/photographer.html
+++ b/photographer.html
@@ -75,5 +75,6 @@
     <script src="scripts/templates/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
     <script src="scripts/utils/lightBox.js"></script>
+    <script src="scripts/utils/likeMedia.js"></script>
   </body>
 </html>
